[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-recruitment-screening-env"
version = "0.1.0"
description = "Recruitment Screening Environment for OpenEnv — train RL agents to screen job candidates"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core] @ git+https://github.com/meta-pytorch/OpenEnv.git@v0.2.3",
    "fastapi>=0.115.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    # No ML or heavy deps — all reward logic is pure Python stdlib
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "recruitment_screening_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "recruitment_screening_env",
    "recruitment_screening_env.server",
]
package-dir = {"recruitment_screening_env" = ".", "recruitment_screening_env.server" = "server"}
